** Added following features - - clicking outside the boundaries of card list will close new card editor and clicking inside won't close it - fixed the navigation header so that it doesn't slide during horizontal scrolling - placed addSubCardButton in ProjectCard component itself and removed it as a separate component

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
 .center {
   text-align: center;
 }
+
+.completeWrapper {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+}
