--- a/src/components/ProjectCard/ProjectCard.module.css
+++ b/src/components/ProjectCard/ProjectCard.module.css
@@ -8,8 +8,9 @@
   margin: 0rem 1rem;
 }
 
-.wrapper textarea{
+.wrapper textarea {
   box-sizing: border-box;
+  resize: none;
 }
 
 .header {
@@ -23,4 +24,50 @@
   margin: 0rem;
 }
 
+.buttonWrapper {
+  padding: 0.3rem 0rem;
+}
 
+.buttonWrapper button {
+  border: none;
+  width: 100%;
+  background-color: #f77f00;
+  color: white;
+  padding: 0.5rem 0rem;
+  font-size: 1rem;
+  font-weight: 700;
+  border-radius: 3px;
+}
+.buttonWrapper button:hover {
+  background-color: #cc6c05;
+}
+
+.editingModeWrapper {
+  padding: 0.3rem 0rem;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.editingModeWrapper .addButton {
+  border: none;
+  padding: 0.3rem 0.5rem;
+  background-color: rgb(106, 106, 241);
+  color: white;
+  border-radius: 3px;
+}
+
+.cancelButton {
+  border: none;
+  background-color: transparent;
+  font-size: 1.2rem;
+  color: rgb(75, 75, 75);
+}
+
+.cancelButton:hover {
+  color: black;
+}
+
+.hidden {
+  display: none;
+}
