--- a/src/pages/ProjectCardList.module.css
+++ b/src/pages/ProjectCardList.module.css
@@ -1,6 +1,11 @@
 .wrapper {
     display: flex;
     flex-direction: row;
+    width: 100vw;
     padding: 3rem;
+    box-sizing: border-box;
     align-items: flex-start;
+    justify-content: flex-start;
+    overflow-x: auto;
+    flex-grow: 1;
 }
